Removed some code smell